--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -71,7 +71,7 @@
 					<div class="android-navigation-container">
 						<nav class="android-navigation mdl-navigation">
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Início</a>
-							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Sobre</a>
+							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#sobre">Sobre</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Serviços</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Publicações</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Editores</a>
@@ -188,7 +188,7 @@
 						<div class="android-wear-band-text">
 							<div class="mdl-typography--display-2 mdl-typography--font-thin">UNIVERSIDADE FEDERAL DO ESPÍRITO SANTO</div>
 							<p class="mdl-typography--headline mdl-typography--font-thin">
-								Android works perfectly with your favourite apps like Google Maps, Calendar and YouTube.
+								O Portal do Conhecimento Baseado em Mapas Conceituais é o principal front-end dos serviços oferecidos pela plataforma CMPaaS. Todos seus desenvolvedores são Professores, Pesquisadores e Estudantes da UFES.
 							</p>
 							<p>
 								<a class="mdl-typography--font-regular mdl-typography--text-uppercase android-alt-link" href="">
@@ -198,7 +198,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="android-customized-section">
+				<div id="sobre" class="android-customized-section">
 					<div class="android-customized-section-text">
 						<div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Portal do Conhecimento e CMPaaS</div>
 						<p class="mdl-typography--font-light">
