--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -23,6 +23,7 @@
 		<meta name="description" content="Introducing Lollipop, a sweet new take on Android.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
 		
+		<link rel="icon" href="images/icone.ico" type="image/x-icon" />
 		<title>Portal do Conhecimento</title>
 
 		<!-- Page styles -->
@@ -50,11 +51,12 @@
 
 			<div class="android-header mdl-layout__header mdl-layout__header--waterfall">
 				<div class="mdl-layout__header-row">
+
 <!--					
 					<span class="android-title mdl-layout-title">
 						<img class="android-logo-image" src="images/portal1.png">
 					</span>
---> 
+ -->
          
           			<!-- Add spacer, to align navigation to the right in desktop -->
 					<div class="android-header-spacer mdl-layout-spacer"></div>
@@ -133,9 +135,10 @@
         			<a name="top"></a>
 				<div class="android-be-together-section mdl-typography--text-center">
 
+<!--
 					<div class="logo-font android-slogan">Portal do Conhecimento </br> Baseado em Mapas Conceituais</div>
 
-<!--					<div class="logo-font android-sub-slogan">3 mil dólares ou nada!</div>
+					<div class="logo-font android-sub-slogan">3 mil dólares ou nada!</div>
 					<div class="logo-font android-create-character">
 					  <a href=""><img src="images/andy.png"> create your android character</a>
 					</div>
@@ -148,7 +151,9 @@
 				</div>
 				<div class="android-screen-section mdl-typography--text-center">
 					<a name="screens"></a>
-					<div class="mdl-typography--display-1-color-contrast">Powering screens of all sizes</div>
+					<div class="mdl-typography--display-1-color-contrast">
+						Serviços em Destaque
+					</div>
 					<div class="android-screens">
 						<div class="android-wear android-screen">
 							<a class="android-image-link" href="">
