--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -188,7 +188,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="android-wear-section">
+				<div id="sobre" class="android-wear-section">
 					<div class="android-wear-band">
 						<div class="android-wear-band-text">
 							<div class="mdl-typography--display-2 mdl-typography--font-thin">UNIVERSIDADE FEDERAL DO ESPÍRITO SANTO</div>
@@ -203,7 +203,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="sobre" class="android-customized-section">
+				<div class="android-customized-section">
 					<div class="android-customized-section-text">
 						<div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Portal do Conhecimento e CMPaaS</div>
 						<p class="mdl-typography--font-light">
