Acerto no editor

--- a/editor-basico/index-cmbuilder.html
+++ b/editor-basico/index-cmbuilder.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 
 <style>
+
+.mdl-radio__outer-circle {
+	border: 2px solid rgba(255,255,255,0.75) !important;
+}
+
+.mdl-radio__inner-circle {
+	background: #fff !important;
+	border: 2px solid #fff !important;
+}
+
+
+
 @font-face {
     font-family: roboto;
     src: url(fontes/RobotoCondensed-Light.ttf);
@@ -20,6 +32,7 @@ body {
 	position:absolute;
 	margin:auto 10%;
 	height:100%;
+	background-color:yellow;
 }
 
 #conteudo h1 {
