link do cmbuilder para o editor

--- a/editor-basico/index-cmbuilder.html
+++ b/editor-basico/index-cmbuilder.html
@@ -32,7 +32,6 @@ body {
 	position:absolute;
 	margin:auto 10%;
 	height:100%;
-	background-color:yellow;
 }
 
 #conteudo h1 {
@@ -230,7 +229,7 @@ body {
 				</div>
 				<div class="mdl-cell mdl-cell--12-col">
 				<div id="div-botao-proximo">
-				  	<button class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored zoomIn animated delay-03s">
+				  	<button onclick="window.location.replace('index.html')" class="mdl-button mdl-js-button mdl-button--fab mdl-js-ripple-effect mdl-button--colored zoomIn animated delay-03s">
 						<i class="material-icons">arrow_forward</i>
 					</button>
 				</div>
