--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -36,20 +36,6 @@
 		
 		<link rel="stylesheet" href="//storage.googleapis.com/code.getmdl.io/1.0.1/material.teal-red.min.css" />
 		<script src="//storage.googleapis.com/code.getmdl.io/1.0.1/material.min.js"></script>
-
-
-		<style>
-			#view-source 
-			{
-				position: fixed;
-				display: block;
-				right: 0;
-				bottom: 0;
-				margin-right: 40px;
-				margin-bottom: 40px;
-				z-index: 900;
-			}
-		</style>
 		
 	</head>
 	<body>
@@ -481,20 +467,24 @@
 						Desenvolvem conosco...
 					</div>
 					</br>
-
-					<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-						<div class="isaque-card-image mdl-card mdl-shadow--2dp">
-							<div class="mdl-card__title mdl-card--expand"></div>
-							<div class="mdl-card__actions">
-								<span class="isaque-card-image__filename"><b>Isaque Rocha</b></span>
-								<span class="isaque-card-image__filename">Versionador de Mapas</span>
+					
+					<div class="mdl-grid">
+						<div class="mdl-cell mdl-cell--6-col">
+							<div class="isaque-card-image mdl-card mdl-shadow--2dp">
+								<div class="mdl-card__title mdl-card--expand"></div>
+								<div class="mdl-card__actions">
+									<span class="isaque-card-image__filename"><b>Isaque Rocha</b></span>
+									<span class="isaque-card-image__filename">Versionador de Mapas</span>
+								</div>
 							</div>
 						</div>
-						<div class="israel-card-image mdl-card mdl-shadow--2dp">
-							<div class="mdl-card__title mdl-card--expand"></div>
-							<div class="mdl-card__actions">
-								<span class="israel-card-image__filename"><b>Israel Henrique</b></span>
-								<span class="israel-card-image__filename">Sugestão de Conceitos</span>
+						<div class="mdl-cell mdl-cell--6-col">
+							<div class="israel-card-image mdl-card mdl-shadow--2dp">
+								<div class="mdl-card__title mdl-card--expand"></div>
+								<div class="mdl-card__actions">
+									<span class="israel-card-image__filename"><b>Israel Henrique</b></span>
+									<span class="israel-card-image__filename">Sugestão de Conceitos</span>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -555,7 +545,6 @@
       
 			</div>
 		</div>
-		<a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/android-dot-com/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--accent mdl-color-text--accent-contrast">View Source</a>
 		<script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 	</body>
 </html>
