Conversão para iso (editor)

--- a/editor-basico/index.html
+++ b/editor-basico/index.html
@@ -196,34 +196,34 @@ body {
 					<i class="material-icons">arrow_back</i>
 				</div>
 				<div class="mdl-cell mdl-cell--12-col">
-					<h1 class="fadeInDown animated">Qual o tipo de representaÃ§Ã£o?</h1>
+					<h1 class="fadeInDown animated">Qual o tipo de representação?</h1>
 				</div>
 				<div class="mdl-cell mdl-cell--3-col fadeInDown animated delay-01s">
 					<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="list-option-1">
 						<input type="radio" id="list-option-1" class="mdl-radio__button" name="options" value="1" checked />
 					</label>
-				  	RepresentaÃ§Ã£o baseada em texto
+				  	Representação baseada em texto
 		  		</div>
 				<div class="mdl-cell mdl-cell--3-col fadeInDown animated delay-01s">
 					<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="list-option-2">
 						<input type="radio" id="list-option-2" class="mdl-radio__button" name="options" value="2" />
 					</label>
-					SumarizaÃ§Ã£o baseada em texto
+					Sumarização baseada em texto
 				</div>
 				<div class="mdl-cell mdl-cell--3-col fadeInDown animated delay-01s">
 					<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="list-option-3">
 						<input type="radio" id="list-option-3" class="mdl-radio__button" name="options" value="3" />
 					</label>
-					SÃ­ntese baseada em texto e domÃ­nio
+					Síntese baseada em texto e domínio
 				</div>
 				<div class="mdl-cell mdl-cell--3-col fadeInDown animated delay-01s">
 					<label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="list-option-4">
 						<input type="radio" id="list-option-4" class="mdl-radio__button" name="options" value="4" />
 					</label>
-					SumarizaÃ§Ã£o baseada em domÃ­nio
+					Sumarização baseada em domínio
 				</div>
 				<div class="mdl-cell mdl-cell--12-col">
-					<h1 class="fadeInDown animated delay-02s">Qual Ã© o texto base?</h1>
+					<h1 class="fadeInDown animated delay-02s">Qual é o texto base?</h1>
 					<div class="mdl-textfield mdl-js-textfield" id="div-texto-base">
 				    		<textarea class="mdl-textfield__input" type="text" rows="8" id="field-texto-base" ></textarea>
 				  	</div>
