--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -35,25 +35,25 @@
 		
 		
 		<link rel="stylesheet" href="//storage.googleapis.com/code.getmdl.io/1.0.1/material.teal-red.min.css" />
-		
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+		<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+		<link href="css/animate.css" rel="stylesheet" type="text/css">
 		<script src="//storage.googleapis.com/code.getmdl.io/1.0.1/material.min.js"></script>
 
 
 <!-- Teste -->
 
 
-<link href="css/bootstrap.css" rel="stylesheet" type="text/css">
 
 <link href="css/linecons.css" rel="stylesheet" type="text/css">
 <link href="css/font-awesome.css" rel="stylesheet" type="text/css">
 <link href="css/responsive.css" rel="stylesheet" type="text/css">
-<link href="css/animate.css" rel="stylesheet" type="text/css">
+
 
 <link href='http://fonts.googleapis.com/css?family=Lato:400,900,700,700italic,400italic,300italic,300,100italic,100,900italic' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Dosis:400,500,700,800,600,300,200' rel='stylesheet' type='text/css'>
 
 
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <!--[if IE]><style type="text/css">.pie {behavior:url(PIE.htc);}</style><![endif]-->
 
@@ -137,7 +137,7 @@ function resizeText() {
 						<nav class="android-navigation mdl-navigation">
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Início</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#sobre">Sobre</a>
-							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Serviços</a>
+							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#servico">Serviços</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Publicações</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Editores</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Contato</a>
@@ -212,7 +212,7 @@ function resizeText() {
 						</button>
 					</a>
 				</div>
-				<div class="android-screen-section mdl-typography--text-center">
+				<div id="servico" class="android-screen-section mdl-typography--text-center">
 					<a name="screens"></a>
 					<div class="mdl-typography--display-1-color-contrast">
 						Serviços em Destaque
@@ -412,8 +412,31 @@ function resizeText() {
 					</div>
 					<div class="android-card-container mdl-grid">
 						<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-							<div class="mdl-card__media">
+							<div class="mdl-card__media team-leader wow fadeInDown delay-03s">
+								<div class="team-leader-shadow">
+									<a href="javascript:void(0)"></a>
+								</div>
 								<img src="images/dede.jpg">
+								<ul>
+									<li>
+										<a href="https://twitter.com/dedecury" target="blank" class="fa-twitter"></a>
+									</li>
+									<li>
+										<a href="https://www.facebook.com/dede.cury.1" target="blank" class="fa-facebook"></a>
+									</li>
+									<li>
+										<a href="https://www.linkedin.com/in/dede-cury-98aa2720" target="blank" class="fa-linkedin"></a>
+									</li>
+									<li>
+										<a href="https://plus.google.com/104140632538430866888" target="blank" class="fa-google-plus"></a>
+									</li>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-instagram"></a>
+									</li>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-github"></a>
+									</li>
+								</ul>
 							</div>
 							<div class="mdl-card__title">
 								<h4 class="mdl-card__title-text">Davidson Cury</h4>								
@@ -424,16 +447,33 @@ function resizeText() {
 							<div class="mdl-card__supporting-text">
 								<span class="mdl-typography--font-light mdl-typography--subhead">Professor Titular do Departamento de Informática da Universidade Federal do Espírito Santo (UFES)</span>
 							</div>
-							<div class="mdl-card__actions">
-								<a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-									Make the switch
-									<i class="material-icons">chevron_right</i>
-								</a>
-							</div>
 						</div>
 						<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-							<div class="mdl-card__media">
+							<div class="mdl-card__media team-leader wow fadeInDown delay-03s">
+								<div class="team-leader-shadow">
+									<a href="javascript:void(0)"></a>
+								</div>
 								<img src="images/wagner.jpg">
+								<ul>
+									<li>
+										<a href="https://twitter.com/wagneraperin" target="blank" class="fa-twitter"></a>
+									</li>
+									<li>
+										<a href="https://www.facebook.com/wagnerperin" target="blank" class="fa-facebook"></a>
+									</li>
+									<li>
+										<a href="https://br.linkedin.com/in/wagner-de-andrade-perin-7a477a60" target="blank" class="fa-linkedin"></a>
+									</li>
+									<li>
+										<a href="https://plus.google.com/115161195251114240231" target="blank" class="fa-google-plus"></a>
+									</li>
+									<li>
+										<a href="https://www.instagram.com/wagnerperin/" target="blank" class="fa-instagram"></a>
+									</li>
+									<li>
+										<a href="https://github.com/wagnerperin" target="blank" class="fa-github"></a>
+									</li>
+								</ul>
 							</div>
 							<div class="mdl-card__title">
 								<h4 class="mdl-card__title-text">Wagner Perin</h4>
@@ -444,16 +484,33 @@ function resizeText() {
 							<div class="mdl-card__supporting-text">
 								<span class="mdl-typography--font-light mdl-typography--subhead">Mestre em Informática e Analista de T.I. da Universidade Federal do Espírito Santo (UFES)</span>
 							</div>
-							<div class="mdl-card__actions">
-								<a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-									androidify.com
-									<i class="material-icons">chevron_right</i>
-								</a>
-							</div>
 						</div>
 						<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-							<div class="mdl-card__media">
+							<div class="mdl-card__media team-leader wow fadeInDown delay-03s">
+								<div class="team-leader-shadow">
+									<a href="javascript:void(0)"></a>
+								</div>
 								<img src="images/camila.jpg">
+								<ul>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-twitter"></a>
+									</li>
+									<li>
+										<a href="https://www.facebook.com/camila.zacche" target="blank" class="fa-facebook"></a>
+									</li>
+									<li>
+										<a href="https://www.linkedin.com/in/camila-zacche-de-aguiar-04872762" target="blank" class="fa-linkedin"></a>
+									</li>
+									<li>
+										<a href="https://plus.google.com/100772671932948873303" target="blank" class="fa-google-plus"></a>
+									</li>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-instagram"></a>
+									</li>
+									<li>
+										<a href="https://github.com/camilazagui" target="blank" class="fa-github"></a>
+									</li>
+								</ul>
 							</div>
 							<div class="mdl-card__title">
 								<h4 class="mdl-card__title-text">Camila Zacche</h4>
@@ -464,16 +521,33 @@ function resizeText() {
 							<div class="mdl-card__supporting-text">
 								<span class="mdl-typography--font-light mdl-typography--subhead">Mestranda em Informática na Universidade Federal do Espírito Santo (UFES)</span>
 							</div>
-							<div class="mdl-card__actions">
-								<a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-									Download now
-									<i class="material-icons">chevron_right</i>
-								</a>
-							</div>
 						</div>
 						<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-							<div class="mdl-card__media">
+							<div class="mdl-card__media team-leader wow fadeInDown delay-03s">
+								<div class="team-leader-shadow">
+									<a href="javascript:void(0)"></a>
+								</div>
 								<img src="images/guilherme.jpg">
+								<ul>
+									<li>
+										<a href="https://twitter.com/GPinotte" target="blank" class="fa-twitter"></a>
+									</li>
+									<li>
+										<a href="https://www.facebook.com/guilherme.pinotte" target="blank" class="fa-facebook"></a>
+									</li>
+									<li>
+										<a href="https://www.linkedin.com/in/guilherme-pinotte-36b52b95" target="blank" class="fa-linkedin"></a>
+									</li>
+									<li>
+										<a href="https://plus.google.com/113096922921593072827" target="blank" class="fa-google-plus"></a>
+									</li>
+									<li>
+										<a href="https://www.instagram.com/guilhermepinotte/" target="blank" class="fa-instagram"></a>
+									</li>
+									<li>
+										<a href="https://github.com/guilhermepinotte" target="blank" class="fa-github"></a>
+									</li>
+								</ul>
 							</div>
 							<div class="mdl-card__title">
 								<h4 class="mdl-card__title-text">Guilherme Pinotte</h4>
@@ -484,16 +558,33 @@ function resizeText() {
 							<div class="mdl-card__supporting-text">
 								<span class="mdl-typography--font-light mdl-typography--subhead">Mestrando em Informática na Universidade Federal do Espírito Santo (UFES)</span>
 							</div>
-							<div class="mdl-card__actions">
-								<a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-									Find apps
-									<i class="material-icons">chevron_right</i>
-								</a>
-							</div>
 						</div>
 						<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-							<div class="mdl-card__media">
+							<div class="mdl-card__media team-leader wow fadeInDown delay-03s">
+								<div class="team-leader-shadow">
+									<a href="javascript:void(0)"></a>
+								</div>
 								<img src="images/daniel.jpg">
+								<ul>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-twitter"></a>
+									</li>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-facebook"></a>
+									</li>									
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-linkedin"></a>
+									</li>
+									<li>
+										<a href="https://plus.google.com/116798262947757395990" target="blank" class="fa-google-plus"></a>
+									</li>
+									<li>
+										<a href="https://www.instagram.com/danieldeassis/" target="blank" class="fa-instagram"></a>
+									</li>
+									<li>
+										<a href="https://github.com/danieldeassis" target="blank" class="fa-github"></a>
+									</li>
+								</ul>
 							</div>
 							<div class="mdl-card__title">
 								<h4 class="mdl-card__title-text">Daniel de Assis</h4>
@@ -504,16 +595,33 @@ function resizeText() {
 							<div class="mdl-card__supporting-text">
 								<span class="mdl-typography--font-light mdl-typography--subhead">Mestrando em Informática na Universidade Federal do Espírito Santo (UFES)</span>
 							</div>
-							<div class="mdl-card__actions">
-								<a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-									Find apps
-									<i class="material-icons">chevron_right</i>
-								</a>
-							</div>
 						</div>
 						<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--3dp">
-							<div class="mdl-card__media">
+							<div class="mdl-card__media team-leader wow fadeInDown delay-03s">
+								<div class="team-leader-shadow">
+									<a href="javascript:void(0)"></a>
+								</div>
 								<img src="images/geraldo.jpg">
+								<ul>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-twitter"></a>
+									</li>
+									<li>
+										<a href="https://www.facebook.com/geraldo.vassoler" target="blank" class="fa-facebook"></a>
+									</li>
+									<li>
+										<a href="https://www.linkedin.com/in/geraldo-vassoler-93a53436" target="blank" class="fa-linkedin"></a>
+									</li>
+									<li>
+										<a href="https://plus.google.com/118156293728289167769" target="blank" class="fa-google-plus"></a>
+									</li>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-instagram"></a>
+									</li>
+									<li>
+										<a href="javascript:void(0)" target="blank" class="fa-github"></a>
+									</li>
+								</ul>
 							</div>
 							<div class="mdl-card__title">
 								<h4 class="mdl-card__title-text">Geraldo Vassoler</h4>
@@ -523,12 +631,6 @@ function resizeText() {
 							</div>
 							<div class="mdl-card__supporting-text">
 								<span class="mdl-typography--font-light mdl-typography--subhead">Mestre em Informática pela UFES e Analista de T.I. da VALE</span>
-							</div>
-							<div class="mdl-card__actions">
-								<a class="android-link mdl-button mdl-js-button mdl-typography--text-uppercase" href="">
-									Find apps
-									<i class="material-icons">chevron_right</i>
-								</a>
 							</div>
 						</div>
 					</div>
@@ -553,7 +655,7 @@ function resizeText() {
 							<div class="israel-card-image mdl-card mdl-shadow--2dp">
 								<div class="mdl-card__title mdl-card--expand"></div>
 								<div class="mdl-card__actions">
-									<span class="israel-card-image__filename"><b>Israel Henrique</b></span>
+									<span class="israel-card-image__filename"><b>Israel Henrique&nbsp;&nbsp;</b></span>
 									<span class="israel-card-image__filename">Sugestão de Conceitos</span>
 								</div>
 							</div>
@@ -591,65 +693,7 @@ function resizeText() {
 
 				</div>
 
-<!-- Teste -->
-<!--c-logo-part-end-->
 
-<section class="main-section team" id="team"><!--main-section team-start-->
-  <div class="container">
-    <h2>Amazing Team</h2>
-    <h6>Take a closer look into our amazing team. We won’t bite.</h6>
-    <div class="team-leader-block clearfix">
-      <div class="team-leader-box">
-        <div class="team-leader wow fadeInDown delay-03s">
-          <div class="team-leader-shadow"><a href="javascript:void(0)"></a></div>
-          <img src="images/team-leader-pic1.jpg" alt="">
-          <ul>
-            <li><a href="javascript:void(0)" class="fa-twitter"></a></li>
-            <li><a href="javascript:void(0)" class="fa-facebook"></a></li>
-            <li><a href="javascript:void(0)" class="fa-pinterest"></a></li>
-            <li><a href="javascript:void(0)" class="fa-google-plus"></a></li>
-          </ul>
-        </div>
-        <h3 class="wow fadeInDown delay-03s">Walter White</h3>
-        <span class="wow fadeInDown delay-03s">Chief Executive Officer</span>
-        <p class="wow fadeInDown delay-03s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-      </div>
-      <div class="team-leader-box">
-        <div class="team-leader  wow fadeInDown delay-06s">
-          <div class="team-leader-shadow"><a href="javascript:void(0)"></a></div>
-          <img src="images/team-leader-pic2.jpg" alt="">
-          <ul>
-            <li><a href="javascript:void(0)" class="fa-twitter"></a></li>
-            <li><a href="javascript:void(0)" class="fa-facebook"></a></li>
-            <li><a href="javascript:void(0)" class="fa-pinterest"></a></li>
-            <li><a href="javascript:void(0)" class="fa-google-plus"></a></li>
-          </ul>
-        </div>
-        <h3 class="wow fadeInDown delay-06s">Jesse Pinkman</h3>
-        <span class="wow fadeInDown delay-06s">Product Manager</span>
-        <p class="wow fadeInDown delay-06s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-      </div>
-      <div class="team-leader-box">
-        <div class="team-leader wow fadeInDown delay-09s">
-          <div class="team-leader-shadow"><a href="javascript:void(0)"></a></div>
-          <img src="images/team-leader-pic3.jpg" alt="">
-          <ul>
-            <li><a href="javascript:void(0)" class="fa-twitter"></a></li>
-            <li><a href="javascript:void(0)" class="fa-facebook"></a></li>
-            <li><a href="javascript:void(0)" class="fa-pinterest"></a></li>
-            <li><a href="javascript:void(0)" class="fa-google-plus"></a></li>
-          </ul>
-        </div>
-        <h3 class="wow fadeInDown delay-09s">Skyler white</h3>
-        <span class="wow fadeInDown delay-09s">Accountant</span>
-        <p class="wow fadeInDown delay-09s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin consequat sollicitudin cursus. Dolor sit amet, consectetur adipiscing elit proin consequat.</p>
-      </div>
-    </div>
-  </div>
-</section>
-<!--main-section team-end-->
-
-<!-- Fim do Teste-->
 				
 
 				
