--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -117,7 +117,7 @@ function resizeText() {
 
 					
 					<span class="android-title mdl-layout-title">
-						<img class="android-logo-image" src="images/logoPortal.png">
+						<img class="logoPrincipal" src="images/logoPrincipal.png">
 					</span>
  
          
@@ -144,7 +144,7 @@ function resizeText() {
 						</nav>
 					</div>
 					<span class="android-mobile-title mdl-layout-title">
-						<img class="android-logo-image" src="images/logo.png">
+						<img class="logoCentral" src="images/logoCentral.png">
 					</span>
 					<button class="android-more-button mdl-button mdl-js-button mdl-button--icon mdl-js-ripple-effect" id="more-button">
 						<i class="material-icons">more_vert</i>
@@ -160,7 +160,7 @@ function resizeText() {
 
 			<div class="android-drawer mdl-layout__drawer">
 				<span class="mdl-layout-title">
-					<img class="android-logo-image" src="images/logo.png">
+					<img class="logoLateral" src="images/logoLateral.png">
 				</span>
 				<nav class="mdl-navigation">
 					<a class="mdl-navigation__link" href="">Início</a>
