--- a/editor-basico/cmbuilder.html
+++ b/editor-basico/cmbuilder.html
@@ -196,7 +196,7 @@ body {
 			<div id="conteudo">
 				<div class="mdl-grid">
 					<div class="mdl-cell mdl-cell--12-col">
-						<i class="material-icons">arrow_back</i>
+						<i onclick="history.back();" style="cursor:pointer;" class="material-icons">arrow_back</i>
 					</div>
 					<div class="mdl-cell mdl-cell--12-col">
 						<h1 class="fadeInDown animated">Qual o tipo de representação?</h1>
