--- a/editor-basico/index.html
+++ b/editor-basico/index.html
@@ -188,19 +188,12 @@ body {
 	
 </html>
 
-<script>
-$(document).ready(function(){
-	// códigos jQuery a serem executados quando a página carregar
-	sleep(2000);
-	window.location.href = "cmbuilder.html";
- });
 
-function sleep(milliseconds) {
-  var start = new Date().getTime();
-  for (var i = 0; i < 1e7; i++) {
-    if ((new Date().getTime() - start) > milliseconds){
-      break;
-    }
-    }
-  }
+<script>
+
+setInterval(redirecionar, 2000);
+
+function redirecionar() {
+	window.location.href = "cmbuilder.html";
+}
 </script>
