antes do almoco

--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -156,7 +156,7 @@
 							<div class="mdl-card__title">
 								<h2 class="mdl-card__title-text">Editor de Mapas Conceituais</h2>
 							</div>
-							<div class="mdl-card__supporting-text">
+							<div class="mdl-card__supporting-text mdl-card--expand">
 								<p>Crie, armazene e gerencie seus Mapas Conceituais de onde quiser.</p>
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
@@ -177,7 +177,7 @@
 							<div class="mdl-card__title">
 								<h2 class="mdl-card__title-text">iMap</h2>
 							</div>
-							<div class="mdl-card__supporting-text">
+							<div class="mdl-card__supporting-text mdl-card--expand">
 								<p>Interaja com seus mapas por meio de perguntas e respostas.</p>
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
@@ -198,7 +198,7 @@
 							<div class="mdl-card__title">
 								<h2 class="mdl-card__title-text">OntoMap</h2>
 							</div>
-							<div class="mdl-card__supporting-text">
+							<div class="mdl-card__supporting-text mdl-card--expand">
 								<p>Construa ontologias razas com nosso editor OWL.</p>
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
@@ -219,7 +219,7 @@
 							<div class="mdl-card__title">
 								<h2 class="mdl-card__title-text">Gerador de Mapas</h2>
 							</div>
-							<div class="mdl-card__supporting-text">
+							<div class="mdl-card__supporting-text mdl-card--expand">
 								<p>Gere mapas conceituais automaticamente a partir de textos.</p>
 							</div>
 							<div class="mdl-card__actions mdl-card--border">
