--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -137,7 +137,7 @@
 						<b>Colabore Conosco!</b>
 					</div>
 					<div class="texto1 subTextoCapa1">
-						<b>Seja usuário, desenvolvedor ou investidor</b></br></br>
+						<b>Seja usuário, desenvolvedor</b></br> <b>ou investidor</b></br></br>
 						<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
 							Cadastre-se
 						</button>
@@ -241,7 +241,7 @@
 						</div>
 						<div class="mdl-cell mdl-cell--3-col mdl-cell--4-col-tablet mdl-cell--4-col-phone mdl-card mdl-shadow--16dp">
 							<figure class="mdl-card__media">
-								<img src="images/mapa3.jpg" alt="" />
+								<img src="images/editor2.jpg" alt="" />
 							</figure>
 							<div class="mdl-card__title">
 								<h2 class="mdl-card__title-text">Gerador de Mapas</h2>
