--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -40,6 +40,8 @@
 		<link href="css/animate.css" rel="stylesheet" type="text/css">
 		<script src="//storage.googleapis.com/code.getmdl.io/1.0.1/material.min.js"></script>
 
+		<link rel="stylesheet" type="text/css" href="css/dialog-polyfill.css" />
+		<script src="js/dialog-polyfill.js"></script>
 
 	</head>
 	<body>
@@ -739,6 +741,33 @@
 				<iframe src="https://www.google.com/maps/embed?pb=!1m17!1m11!1m3!1d865.8909596762527!2d-40.30593451110011!3d-20.273451028988042!2m2!1f0!2f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xb81806e8ccc563%3A0xef39e58c104c8a86!2sDepartamento+de+Inform%C3%A1tica%2C+Centro+Tecnol%C3%B3gico+-+UFES!5e1!3m2!1spt-BR!2sbr!4v1498670890568" width="1000" height="400" frameborder="2" style="border:2" allowfullscreen></iframe>
 				</div>
 
+
+<button id="show-dialog" type="button" class="mdl-button">Show Dialog</button>
+  <dialog class="mdl-dialog">
+    <h4 class="mdl-dialog__title">Allow data collection?</h4>
+    <div class="mdl-dialog__content">
+      <p>
+        Allowing us to collect data will let us get you the information you want faster.
+      </p>
+    </div>
+    <div class="mdl-dialog__actions">
+      <button type="button" class="mdl-button">Agree</button>
+      <button type="button" class="mdl-button close">Disagree</button>
+    </div>
+  </dialog>
+  <script>
+    var dialog = document.querySelector('dialog');
+    var showDialogButton = document.querySelector('#show-dialog');
+    if (! dialog.showModal) {
+      dialogPolyfill.registerDialog(dialog);
+    }
+    showDialogButton.addEventListener('click', function() {
+      dialog.showModal();
+    });
+    dialog.querySelector('.close').addEventListener('click', function() {
+      dialog.close();
+    });
+  </script>
 
 				
 
