--- a/editor/editor.html
+++ b/editor/editor.html
@@ -22,9 +22,6 @@
 		<!-- Tela cheia -->
 		<script src="../recursos/screenfull/screenfull.js"></script>
 		
-		<!-- Intro Js -->
-		<link href="css/introjs.css" rel="stylesheet">
-		
 		<!-- Fontes -->
 		<link rel="stylesheet" href="../recursos/fontes/fontes.css">
 		
@@ -157,7 +154,7 @@
 			
 				<!-- Barra de Título -->
 				<div class="mdl-layout__header-row" id="barra-titulo">
-					<i id="icone-voltar" class="material-icons" onclick="history.back();">arrow_back</i>
+					<i id="icone-voltar" class="material-icons" onclick="window.location.href='../profile/profile.html';">arrow_back</i>
 					<span class="mdl-layout__title modal__trigger" data-modal="#modal-titulo" onclick="preencherInputTitulo()">
 						<i id="titulo">Documento sem título</i>
 					</span>
