--- a/editor/cmbuilder.html
+++ b/editor/cmbuilder.html
@@ -29,7 +29,7 @@
 			<div id="conteudo">
 				<div class="mdl-grid">
 					<div class="mdl-cell mdl-cell--12-col">
-						<i onclick="history.back();" style="cursor:pointer;" class="material-icons">arrow_back</i>
+						<i onclick="window.location.href='../profile/profile.html';" style="cursor:pointer;" class="material-icons">arrow_back</i>
 					</div>
 					<div class="mdl-cell mdl-cell--12-col">
 						<h1 class="fadeInDown animated">Qual o tipo de representação?</h1>
