--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -61,7 +61,7 @@
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#sobre">Sobre</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#servico">Serviços</a>
 							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="#contato">Contato</a>
-							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="">Login</a>
+							<a class="mdl-navigation__link mdl-typography--text-uppercase" href="../login/index.html">Login</a>
 						</nav>
 					</div>
 
@@ -96,7 +96,7 @@
 					<a class="mdl-navigation__link" href="#sobre">Sobre</a>
 					<a class="mdl-navigation__link" href="#servico">Serviços</a>					
 					<a class="mdl-navigation__link" href="#contato">Contato</a>
-					<a class="mdl-navigation__link" href="">Login</a>					
+					<a class="mdl-navigation__link" href="../login/index.html">Login</a>					
 				</nav>
 			</div>
 	
@@ -105,7 +105,7 @@
         		<a name="top"></a>
         		
         		<!-- Imagem principal -->	
-				<div class="portal-be-together-section animated fadeInUp wow">
+				<div class="portal-be-together-section">
 					
 					<!-- Texto da imagem principal -->
 					<div class="texto textoCapa delay-03s animated wow zoomIn">
@@ -123,7 +123,7 @@
 					</div>
 					<div class="texto1 subTextoCapa1 delay-03s animated wow zoomIn">
 						<b>Seja usuário, desenvolvedor</b></br> <b>ou investidor</b></br></br>
-						<button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
+						<button type="reset" onclick="location.href='../login/index.html'" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
 							Cadastre-se
 						</button>
 					</div>
