--- a/login/index.html
+++ b/login/index.html
@@ -1,80 +1,88 @@
 <!DOCTYPE html>
-<html >
-<head>
-  <meta charset="UTF-8">
-  <title>Material Login Form</title>
-  
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<html lang="pt-br">
+	<head>
+		<meta charset="UTF-8">
+		<title>Login</title>
 
-  <link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
-<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
 
-      <link rel="stylesheet" href="css/style.css">
+		<link rel='stylesheet prefetch' href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700,900|RobotoDraft:400,100,300,500,700,900'>
+		<link rel='stylesheet prefetch' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 
-  
-</head>
+		<link rel="stylesheet" href="css/style.css">
+	</head>
+	<body>
+		<!-- Mixins-->
+		<!-- Pen Title-->
+		<div class="pen-title">
+			<h1>Portal do Conhecimento</h1>
+		</div>
+		<div class="container">
+			<div class="card"></div>
+			<div class="card">
+				<h1 class="title">Login</h1>
+				<form>
+					<div class="input-container">
+						<input type="#{type}" id="#{label}" required="required"/>
+						<label for="#{label}">Usuário</label>
+						<div class="bar"></div>
+					</div>
+					<div class="input-container">
+						<input type="password" id="#{label}" required="required"/>
+						<label for="#{label}">Senha</label>
+						<div class="bar"></div>
+					</div>
+					<div class="button-container">
+						
+						<button type="reset" onclick="location.href='../profile/profile.html'">
+							<span>Entrar</span>
+						</button>
+						
+					</div>
+					<div class="footer">
+						<a href="#">Esqueceu sua senha?</a>
+						</br></br>
+						<a href="#">----------------------- || ----------------------</a>
+						</br></br>
+						<a href="" class="fa fa-facebook-official" style="font-size:48px;color:#3b5998"></a>&nbsp;&nbsp;&nbsp;
+						<a href="" class="fa fa-google-plus-square" style="font-size:48px;color:#dd4b39"></a>&nbsp;&nbsp;&nbsp;
+						<a href="" class="fa fa-twitter-square" style="font-size:48px;color:#55acee"></a>
+					</div>
+				</form>
+			</div>
+			<div class="card alt">
+				<div class="toggle"></div>
+				<h1 class="title">Cadastro
+					<div class="close"></div>
+				</h1>
+				<form>
+					<div class="input-container">
+						<input type="#{type}" id="#{label}" required="required"/>
+						<label for="#{label}">Usuário</label>
+						<div class="bar"></div>
+					</div>
+					<div class="input-container">
+						<input type="password" id="#{label}" required="required"/>
+						<label for="#{label}">Senha</label>
+						<div class="bar"></div>
+					</div>
+					<div class="input-container">
+						<input type="password" id="#{label}" required="required"/>
+						<label for="#{label}">Repita a Senha</label>
+						<div class="bar"></div>
+					</div>
+					<div class="button-container">
+						<button>
+							<span>Cadastrar</span>
+						</button>
+						</br></br></br></br></br>
+					</div>
+				</form>
+			</div>
+		</div>
 
-<body>
-  
-<!-- Mixins-->
-<!-- Pen Title-->
-<div class="pen-title">
-  <h1>Material Login Form</h1><span>Pen <i class='fa fa-code'></i> by <a href='http://andytran.me'>Andy Tran</a></span>
-</div>
-<div class="rerun"><a href="">Rerun Pen</a></div>
-<div class="container">
-  <div class="card"></div>
-  <div class="card">
-    <h1 class="title">Login</h1>
-    <form>
-      <div class="input-container">
-        <input type="#{type}" id="#{label}" required="required"/>
-        <label for="#{label}">Username</label>
-        <div class="bar"></div>
-      </div>
-      <div class="input-container">
-        <input type="#{type}" id="#{label}" required="required"/>
-        <label for="#{label}">Password</label>
-        <div class="bar"></div>
-      </div>
-      <div class="button-container">
-        <button><span>Go</span></button>
-      </div>
-      <div class="footer"><a href="#">Forgot your password?</a></div>
-    </form>
-  </div>
-  <div class="card alt">
-    <div class="toggle"></div>
-    <h1 class="title">Register
-      <div class="close"></div>
-    </h1>
-    <form>
-      <div class="input-container">
-        <input type="#{type}" id="#{label}" required="required"/>
-        <label for="#{label}">Username</label>
-        <div class="bar"></div>
-      </div>
-      <div class="input-container">
-        <input type="#{type}" id="#{label}" required="required"/>
-        <label for="#{label}">Password</label>
-        <div class="bar"></div>
-      </div>
-      <div class="input-container">
-        <input type="#{type}" id="#{label}" required="required"/>
-        <label for="#{label}">Repeat Password</label>
-        <div class="bar"></div>
-      </div>
-      <div class="button-container">
-        <button><span>Next</span></button>
-      </div>
-    </form>
-  </div>
-</div>
-<!-- Portfolio--><a id="portfolio" href="http://andytran.me/" title="View my portfolio!"><i class="fa fa-link"></i></a>
-<!-- CodePen--><a id="codepen" href="https://codepen.io/andytran/" title="Follow me!"><i class="fa fa-codepen"></i></a>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+		<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+		<script src="js/index.js"></script>
 
-    <script src="js/index.js"></script>
-
-</body>
+	</body>
 </html>
