Video do cmpaas

--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -239,7 +239,12 @@
 				<!-- Sobre Cmpaas -->
 				<div class="portal-customized-section">
 					<div class="portal-customized-section-text">
-						<div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Portal do Conhecimento e CMPaaS</div>
+						<div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Portal do Conhecimento e CMPaaS</div></br></br>
+
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/Q3ReWqkhVEs?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></br></br></br></br>
+
+
+<!-- 
 						<p class="mdl-typography--font-light">
 							</br>
 							Seja Bem-Vindo ao Portal do Conhecimento Baseado em Mapas Conceituais! 
@@ -278,6 +283,9 @@
 							<br></br>
 							<a href="" class="portal-link mdl-typography--font-light">UFES</a>
 						</p>
+
+-->
+
 					</div>
 					<div class="portal-customized-section-image"></div>
 				</div>
