Vídeo local adicionado

--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -241,10 +241,18 @@
 					<div class="portal-customized-section-text">
 						<div class="mdl-typography--font-light mdl-typography--display-1-color-contrast">Portal do Conhecimento e CMPaaS</div></br></br>
 
-						<iframe width="560" height="315" src="https://www.youtube.com/embed/Q3ReWqkhVEs?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></br></br></br></br>
-
+						<div class="video-container">		
+							<video width="" height="" controls="controls" autoplay="autoplay">
+								<source src="video/portal.mp4" type="video/mp4">
+							</video>
+						</div>
 
 <!-- 
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/Q3ReWqkhVEs?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen></iframe></br></br></br></br>
+
+					
+
+
 						<p class="mdl-typography--font-light">
 							</br>
 							Seja Bem-Vindo ao Portal do Conhecimento Baseado em Mapas Conceituais! 
@@ -801,7 +809,7 @@
 							<li class="mdl-menu__item"><a href="#sobre">Sobre</a></li>
 							<li class="mdl-menu__item"><a href="#servico">Serviços</a></li>
 							<li class="mdl-menu__item"><a href="#contato">Contato</a></li>
-							<li class="mdl-menu__item"><a href="">Login</a></li>
+							<li class="mdl-menu__item"><a href="../login/index.html">Login</a></li>
 						</ul>						
 					</div>
 				</footer>
