--- a/paginaInicial/index.html
+++ b/paginaInicial/index.html
@@ -630,6 +630,15 @@
 								</div>
 							</div>
 						</div>
+						<div class="mdl-cell mdl-cell--3-col">
+							<div class="leo-card-image mdl-card mdl-shadow--2dp">
+								<div class="mdl-card__title mdl-card--expand"></div>
+								<div class="mdl-card__actions">
+									<span class="leo-card-image__filename"><b>Léo Santos</b></span>
+									<span class="leo-card-image__filename">Aprovador de Ideias</span>
+								</div>
+							</div>
+						</div>
 					</div>
 					<!-- Fim desenvolvedores -->
 
